k8s/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: resource-management
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8180
    targetPort: 8180
  selector:
    app: keycloak
